# texas-pokker-odds-mcp-server

./: README.md  README_CN.md  pyproject.toml  server.py
scripts/: poker_odds  poker_odds.c  texas_holdem_simulator.py
