[project]
name = "texas-pokker-odds-mcp-server"
version = "0.0.1"
description = "A MCP server to calculate Texas Hold'em poker odds."
authors = [
    { name = "ptbsare", email = "496725701@qq.com" }
]
dependencies = [
    "mcp",
    "pydantic",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []